Fix some IE9 layout bugs

--- a/src/sass/blocks/_hero.scss
+++ b/src/sass/blocks/_hero.scss
@@ -2,6 +2,8 @@
 	@extend .rounded;
 	@extend .text-hidden;
 	height: 496px;
+	margin-right: 15px;
+	margin-left: 15px;
 	margin-bottom: 30px;
 	background: url(../img/hero.jpg) center center no-repeat;
 }
