--- a/src/sass/blocks/_slidable-content.scss
+++ b/src/sass/blocks/_slidable-content.scss
@@ -1,12 +1,10 @@
 .slidable-content {
-	@extend .container;
 	position: fixed;
-	padding: 50px;
+	padding: 50px 0;
 	top: 52px;
+	bottom: 0;
 	left: 0;
 	right: 0;
-	width: 100%;
-	height: 100%;
 	overflow-x: hidden;
 	overflow-y: scroll;
 	background: $bg--gray;
@@ -23,6 +21,6 @@
 
 @media (max-width: 740px) {
 	.slidable-content {
-		padding: 20px;
+		padding: 0;
 	}
 }
